--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
                 padding-bottom: 20px;
             }
         </style>
-        <link rel="stylesheet" href="css/themes/default.css">
+        <link rel="stylesheet" href="css/themes/darkly.css">
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/lib/modernizr.js"></script>
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Objetos Perdidos Recién Encontrados</a>
         </div>
         <div class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
@@ -54,8 +54,13 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+      <div class="alert alert-success">Bienvenido!</div>
+      <div class="alert alert-danger">Contrasena Incorrecta</div>
+      
+        <h1>O.P.R.E</h1>
+        <p> (O.P.R.E) Sigla de: "Objetos perdidos recién encontrados" 
+        Es un proyecto, creado para solucionar uno de los problemas mas comunes de la sociedad.
+        </p>
         <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
